--- a/front/src/components/UI/WorkSpace/Department for technical services/VPN Card/VPNCard.css
+++ b/front/src/components/UI/WorkSpace/Department for technical services/VPN Card/VPNCard.css
@@ -25,6 +25,13 @@
   width: 100%;
 }
 
+.passive-vpn-icon {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .vpn-info-list {
   display: flex;
   flex-wrap: wrap;
