--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -6,7 +6,10 @@
 .udetails__setting {
 	align-self: flex-end;
 }
-
+.uwidget__item--special {
+	min-height: 320px;
+	background: red;
+}
 .udetails__setting:hover path {
 	transition: all 0.2s ease-in-out;
 	fill: rgba(109, 109, 109, 0.478);
@@ -41,7 +44,9 @@
 	background: rgba(255, 255, 255, 0.8);
 	background: linear-gradient(to right, #f5e1e4, #e3eeff);
 	/* padding: 20px 10px; */
+	margin-bottom: 15px;
 }
+
 .unidentified--bg {
 	background: linear-gradient(135deg, #386c99d4, #7b4eb35b);
 }
@@ -171,24 +176,62 @@
 /* Uwidgets */
 .udetails__uwidget {
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 20px;
-	margin-bottom: 15px;
-	background: linear-gradient(to right, #f5e1e4, #e3eeff);
+	flex-wrap: wrap;
+	gap: 5px;
+	margin-bottom: 20px;
 }
 
-.recharts-wrapper dashboard__content charts__bg .recharts-wrapper,
+/* .uwidget__ */
+
+/* Cделать грид */
+.udetails__uwidget-list {
+	display: grid;
+	grid-template-columns: repeat(8, 1fr) 1fr 2fr;
+	grid-row: auto;
+	gap: 10px;
+}
+.uwidget__item {
+	min-height: max-content;
+}
+.uwidget__item:nth-child(1) {
+	grid-column: 2/6;
+}
+
+.uwidget__item:nth-child(2) {
+	grid-column: 2/6;
+}
+
+.uwidget__item:nth-child(3) {
+	grid-column: 6/9;
+	grid-row: 1/3;
+}
+
+.uwidget__item:nth-child(4) {
+	grid-column: 9/11;
+	grid-row: 1/3;
+}
+
+.uwidget__item--special {
+	/* min-height: 200px; */
+	min-height: 350px;
+}
+
+.uwidget__standart {
+	/* Пришлось :( */
+	min-height: 150px !important;
+}
+
+.recharts-wrapper .dashboard__content .charts__bg .recharts-wrapper,
 .dashboard__content,
 .charts__bg {
 	width: 100% !important;
 }
 .udetails__chart {
 	padding: 0 10px;
-	/* min-height: 200px; */
 	/* background: linear-gradient(to right, #f5e1e4, #e3eeff); */
 }
 .dashboard__content,
 .charts__bg {
 	border-radius: 20px;
+	min-height: 200px;
 }
