--- a/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
+++ b/front/src/components/Pages/UProfile/Uwidget/Uwidget.css
@@ -1,38 +1,41 @@
 .uwidget__content {
 	display: flex;
-	padding: 16px 16px;
+	padding: 10px 14px;
 	align-items: center;
 }
 
+.uwidget__item {
+	cursor: pointer;
+}
 .uwidget__style {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
 	align-self: stretch;
-	min-height: 170px;
+	justify-content: center;
+	font-size: 14px;
+	gap: 5px;
 }
 
 .uwidget__style {
-	/* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
-	/* background-color: #c7f4c2; */
 	background-color: #dde0ff;
-	color: #000000e4;
+	color: #fff;
 	font-weight: 600;
 	font-size: 16px;
 	border-radius: 16px;
 	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(255, 255, 255, 0.2);
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
+	min-height: 330px;
+}
+.uwidget__item-title {
+	font-size: 10px;
+	font-weight: 700;
+	align-self: flex-start;
 }
 
 .uwidget__style:hover {
 	transform: translateY(-2px);
 	box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15),
 		0 4px 6px rgba(255, 255, 255, 0.25);
-}
-
-.primary {
-	color: #fff;
-	background: linear-gradient(135deg, #981bbbd8, #4bc9e5);
 }
 
 .secondary {
