--- a/front/src/components/UI/WorkSpace/WorkSpace.css
+++ b/front/src/components/UI/WorkSpace/WorkSpace.css
@@ -22,7 +22,7 @@
 }
 
 .tab {
-  padding: 10px;
+  padding: 15px;
   border-bottom: 3px solid transparent;
   cursor: pointer;
   transition: all 0.1s;
@@ -30,6 +30,10 @@
   transition: all 0.2s;
   width: 100%;
   text-align: center;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-left: 40px;
 }
 
 .tab:hover {
@@ -46,6 +50,7 @@
   background-color: #607d8b; /* Оставляем фон как у активного элемента */
   color: #fff; /* Оставляем цвет текста */
 }
+
 .stage-title {
   background: linear-gradient(135deg, #e5624b, #607d8b);
   color: #fff;
