--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -143,6 +143,14 @@
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	padding: 20px;
 	/* background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%); */
+	/* ---------v2---------- */
+	background: rgba(255, 255, 255, 0.2);
+	border-radius: 10px;
+	backdrop-filter: blur(10px);
+	-webkit-backdrop-filter: blur(10px);
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	/* ---------v2---------- */
 }
 
 /* #dde0ff */
@@ -186,29 +194,29 @@
 /* Cделать грид */
 .udetails__uwidget-list {
 	display: grid;
-	grid-template-columns: repeat(8, 1fr) 1fr 2fr;
+	grid-template-columns: repeat(2, 1fr) 1fr 2fr;
 	grid-row: auto;
 	gap: 10px;
 }
 .uwidget__item {
 	min-height: max-content;
 }
-.uwidget__item:nth-child(1) {
-	grid-column: 2/6;
+
+/* .uwidget__item:nth-child(1) {
+	grid-column: 1/2;
 }
 
 .uwidget__item:nth-child(2) {
-	grid-column: 2/6;
-}
+	grid-column: 1/2;
+} */
 
 .uwidget__item:nth-child(3) {
-	grid-column: 6/9;
-	grid-row: 1/3;
+	grid-column: 2 / 4;
+	grid-row: 1 / 3;
 }
-
 .uwidget__item:nth-child(4) {
-	grid-column: 9/11;
-	grid-row: 1/3;
+	grid-column: 4/6;
+	grid-row: 1 / 3;
 }
 
 .uwidget__item--special {
