--- a/front/src/components/UI/WorkSpace/WorkSpace.css
+++ b/front/src/components/UI/WorkSpace/WorkSpace.css
@@ -79,13 +79,12 @@
 }
 
 .stage-title {
-  background: linear-gradient(135deg, #e5624b, #607d8b);
+  background-color: #607d8b;
   color: #fff;
   display: flex;
   align-items: end;
-  padding-left: 3px;
-  width: 8%;
-  justify-content: center;
+  padding: 5px 15px;
+  justify-content: space-between;
   text-align: center;
   writing-mode: vertical-rl; /* Текст вертикально, справа налево */
   transform: rotate(180deg); /* Повернуть текст, чтобы читать сверху вниз */
@@ -96,33 +95,19 @@
 }
 
 .stage-indicator::after {
-  content: "";
+  content: attr(data-content);
   position: absolute;
-  background: linear-gradient(135deg, #41ff6f, #607d8b);
-  width: 30%;
+  background: linear-gradient(135deg, #33c157, #607d8b);
+  /* background: linear-gradient(135deg, #ff4141, #607d8b); */
+  width: 100%;
   height: 100%;
   bottom: 0;
   right: 0;
-  padding: 15px;
-}
-
-.stage-indicator .percent-title {
-  color: #fff;
-  position: absolute;
-  top: 46%;
-  right: 10%;
-  z-index: 1;
-  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .column-stage {
   display: flex;
-}
-
-.second-step {
-  width: 4%;
-}
-
-.third-step {
-  width: 4%;
 }
