--- a/front/src/components/UI/WorkSpace/WorkSpace.css
+++ b/front/src/components/UI/WorkSpace/WorkSpace.css
@@ -82,9 +82,9 @@
   background-color: #607d8b;
   color: #fff;
   display: flex;
-  align-items: end;
+  align-items: center;
   padding: 5px 15px;
-  justify-content: space-between;
+  justify-content: center;
   text-align: center;
   writing-mode: vertical-rl; /* Текст вертикально, справа налево */
   transform: rotate(180deg); /* Повернуть текст, чтобы читать сверху вниз */
@@ -94,8 +94,8 @@
   position: relative;
 }
 
-.stage-indicator::after {
-  content: attr(data-content);
+.stage-indicator::before {
+  content: "";
   position: absolute;
   background: linear-gradient(135deg, #33c157, #607d8b);
   /* background: linear-gradient(135deg, #ff4141, #607d8b); */
@@ -106,6 +106,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.stage-indicator p {
+  position: absolute;
+}
+
+.stage-indicator p span {
+  color: #09ff00;
 }
 
 .column-stage {
