--- a/front/src/components/UI/WorkSpace/WorkSpace.css
+++ b/front/src/components/UI/WorkSpace/WorkSpace.css
@@ -44,7 +44,7 @@
   content: "";
   position: absolute;
   background: linear-gradient(135deg, #607d8b, #41ff6f);
-  width: 60%;
+  width: var(--percent-width); /* Используем CSS-переменную */
   height: 8%;
   bottom: -7%;
   left: 0;
@@ -57,6 +57,7 @@
   right: 3%;
   z-index: 1;
   font-size: 14px;
+  padding-top: 3px;
 }
 
 .tab.active .percent-title {
