--- a/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
+++ b/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
@@ -25,7 +25,6 @@ button {
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	backdrop-filter: blur(10px);
 	border: 1px solid rgba(255, 255, 255, 0.2);
-	margin-bottom: 20px;
 }
 
 /* Кнопки */
@@ -33,31 +32,51 @@ button {
 .ucalendar__btn {
 	padding: 10px 20px;
 	background-color: rgba(255, 255, 255, 0.5);
-	color: #000;
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	border-radius: 6px;
 	cursor: pointer;
 	transition: background-color 0.3s ease, color 0.3s ease;
 	backdrop-filter: blur(10px);
 	text-align: center;
+	background-color: rgba(0, 128, 0, 0.486);
+	border: none;
+	padding: 10px;
+	color: #ffffff93;
+	border: none;
+	border-radius: 19px !important;
 }
 
-.ucalendar__btn:hover {
-	background-color: rgba(255, 255, 255, 0.7);
-	color: #4643ffd2 !important;
+.react-calendar__month-view__days {
+	padding: 0 0 10px 10px;
+	gap: 4px;
 }
+
+/* btn */
+.css-1rwt2y5-MuiButtonBase-root-MuiButton-root.Mui-disabled {
+	border: none;
+	color: #ffffff5d;
+}
+
+.profile.dark-mode.ucalendar__btn {
+	background-color: rgba(0, 128, 0, 0.486);
+}
+.ucalendar__btn:hover {
+	background-color: green;
+	border: none;
+	color: #fff;
+}
+/* btn */
 
 /* Подсвеченные даты с событиями */
 .highlighted-date {
-	background-color: rgba(191, 244, 118, 0.715) !important;
+	background-color: rgba(192, 244, 118, 0.935) !important;
 
 	color: rgb(0, 0, 0) !important;
 	border-radius: 8px;
 	backdrop-filter: blur(5px);
 }
 .react-calendar__tile--active {
-	background-color: rgba(255, 193, 7, 0.8) !important;
-	color: red !important;
+	background-color: rgb(250, 201, 54) !important;
 }
 
 .react-calendar__tile--now {
@@ -77,7 +96,7 @@ button {
 	color: #fff;
 	font-weight: 500;
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
-	padding: 30px 30px 30px 50px;
+	padding: 10px;
 	width: 100%;
 }
 
@@ -109,6 +128,13 @@ button {
 	gap: 10px;
 	background: transparent !important;
 }
+
+/* DarkMode */
+.profile.dark-mode .calendar__events-form-title {
+	color: #fff;
+}
+/* DarkMode */
+
 .calendar__event_content {
 	display: flex;
 	gap: 10px;
@@ -157,7 +183,7 @@ button {
 	/* background-color: #ffffff5a; */
 }
 .show__events-deletealltasks--hidden {
-	visibility: hidden;
+	display: none;
 }
 
 .show__events-deletealltasks svg path {
@@ -202,6 +228,25 @@ button {
 	fill: rgba(200, 200, 200, 0.823);
 }
 
-/* .live-event-preview {
-	width: 100%;
-} */
+/* DarkMode */
+.profile.dark-mode .ucalendar__content {
+	background: linear-gradient(
+		112.1deg,
+		rgb(32, 38, 57) 11.4%,
+		rgb(63, 76, 119) 70.2%
+	);
+	border: none;
+}
+
+.profile.dark-mode .react-calendar {
+	background: transparent;
+	color: #fff;
+}
+
+.profile.dark-mode .react-calendar button {
+	color: #fff;
+}
+
+.profile.dark-mode .show__events-content {
+	background: linear-gradient(196deg, #84fab0db 0%, #8fd3f4 100%);
+}
