--- a/front/src/components/UI/WorkSpace/WorkSpace.css
+++ b/front/src/components/UI/WorkSpace/WorkSpace.css
@@ -103,7 +103,7 @@
 .stage-indicator::before {
   content: "";
   position: absolute;
-  background: linear-gradient(135deg, #33c157, #607d8b);
+  background: linear-gradient(135deg, var(--percent-stage-color), #607d8b);
   /* background: linear-gradient(135deg, #ff4141, #607d8b); */
   width: 100%;
   height: var(--percent-stage-height); /* Используем CSS-переменную */
@@ -119,7 +119,7 @@
 }
 
 .stage-indicator p span {
-  color: #09ff00;
+  color: var(--percent-stage-color);
 }
 
 .column-stage {
