--- a/front/src/components/Pages/UProfile/Udetails/Udetails.css
+++ b/front/src/components/Pages/UProfile/Udetails/Udetails.css
@@ -30,9 +30,15 @@
 	fill: #333;
 }
 
+.profile__settings-btn {
+	cursor: pointer;
+}
+
 .dark-mode-btn {
 	position: relative;
+	cursor: pointer;
 }
+
 
 .dark-mode-btn::before {
 	content: "☀️";
