--- a/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
+++ b/front/src/components/Pages/UProfile/Ucalendar/Ucalendar.css
@@ -52,7 +52,7 @@
 	background-color: rgba(0, 128, 0, 0.486);
 }
 .ucalendar__btn:hover {
-	background-color: rgba(12, 212, 12, 0.738);
+	background-color: rgba(83, 221, 83, 0.858);
 	border: none;
 	color: #fff;
 }
@@ -174,6 +174,7 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 
 .show__events-content {
 	position: relative;
+	min-height: 150px;
 }
 
 .show__events-deletealltasks {
