--- a/front/src/components/UI/WorkSpace/WorkSpace.css
+++ b/front/src/components/UI/WorkSpace/WorkSpace.css
@@ -130,6 +130,9 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.121);
   border-radius: 0 0 20px 20px;
   overflow: hidden;
+  border-bottom: 1px solid #00000021;
+  border-right: 1px solid #00000021;
+  border-left: 1px solid #00000021;
 }
 
 .navigation-tabs-stage-one,
@@ -138,6 +141,9 @@
   background-color: #fff;
   border-radius: 20px 20px 0 0;
   overflow: hidden;
+  border-top: 1px solid #00000021;
+  border-right: 1px solid #00000021;
+  border-left: 1px solid #00000021;
 }
 
 .navigation-tabs-stage-two,
