--- a/front/src/components/Pages/Navigation/Navigation.css
+++ b/front/src/components/Pages/Navigation/Navigation.css
@@ -51,10 +51,10 @@
 	content: "";
 	position: absolute;
 	top: 0;
-	right: 0;
+	right: 5px;
 	background-color: rgb(14, 253, 173);
 	border-radius: 100%;
-	right: 52%;
+	right: 40%;
 }
 
 /* .nav__verification--icon path {
