--- a/front/src/components/Pages/UProfile/Uevents/Uevents.css
+++ b/front/src/components/Pages/UProfile/Uevents/Uevents.css
@@ -1,9 +1,6 @@
 .uevents__card {
-	/* flex-direction: column; */
-	/* background-color: #bfb5ff; */
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 	background: linear-gradient(135deg, #981bbbd8, #4bc9e5);
 	border-radius: 20px;
 	box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(255, 255, 255, 0.2);
@@ -12,15 +9,14 @@
 	font-size: 12px;
 	width: 100%;
 	margin-bottom: 10px;
-	/* min-height: 110px; */
-	min-height: 100px;
+	gap: 20px;
 }
+
 .vertical-line {
 	max-width: 2px;
 	width: 100%;
-	min-height: 100%;
-	/* min-height: 30px; */
-	background-color: rgb(234, 117, 117);
+	min-height: 50px;
+	background-image: linear-gradient(to bottom, #ff7e5f, #feb47b);
 }
 
 .profile.dark-mode .uevents__card {
