--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -119,7 +119,7 @@
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-template-rows: auto;
-	gap: 10px;
+	gap: 25px;
 }
 
 .profile_style {
@@ -132,10 +132,14 @@
 		0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
+	/* // Сделать showAside */
+/* .profile__center-full .profile__show-aside-btn svg path {
+	fill: #fff;
+} */
+
 .profile_left {
 	display: flex;
 	justify-content: space-between;
-
 	border-radius: 10px;
 	padding: 30px;
 	border: 1px solid #0000000f;
@@ -144,11 +148,6 @@
 		0 2px 4px -1px rgba(0, 0, 0, 0.06);
 	top: 13%;
 	width: 100%;
-	/* max-height: 200px; */
-	/* max-width: 300px; */
-	/* left: 18%; */
-	/* position: fixed; */ /* justify-content: center; */
-	/* flex-direction: column; */
 }
 
 /* Убираем маргин у элементов аккордиона */
@@ -170,6 +169,11 @@
 	grid-column: 1/9;
 	grid-row: 1/1;
 }
+/* showAside true ? */
+.profile__center-full {
+	grid-column: 1/13;
+}
+/* showAside true ? */
 
 .profile_right {
 	grid-area: profileRight;
@@ -370,3 +374,14 @@
 	fill: rgba(228, 228, 228, 0.55);
 }
 /* DarkMode */
+
+/* ShowRightAside */
+.profile__show-aside-btn {
+	content: "";
+	position: absolute;
+	right: 33%;
+	bottom: 90%;
+	max-width: max-content;
+	font-size: 20px;
+}
+/* ShowRightAside */
