--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -389,9 +389,14 @@
 	position: absolute;
 	bottom: 0;
 	right: 0;
-	top: 120%;
+	top: 60%;
 	max-width: max-content;
 	font-size: 20px;
+	display: flex;
+	align-items: center;
+	background-color: rgba(189, 189, 189, 0.601);
+	border-radius: 4px;
+	min-height: 300px;
 }
 
 .profile.dark-mode .profile__show-aside-btn svg {
