--- a/front/src/components/Pages/UProfile/Uevents/Uevents.css
+++ b/front/src/components/Pages/UProfile/Uevents/Uevents.css
@@ -23,6 +23,7 @@
 
 .profile.dark-mode .uevents__card {
 	background: linear-gradient(360deg, #84faafd9 0%, #8fd3f4 100%);
+	color: #fff;
 }
 
 .uevents__card:hover {
